----------------
 List of changes
 ---------------

7/24/18
- formatting go_tar exclude from tar
- better README and walkthrough explanation
- better step-by-step instruction formatting
- added qc option to wget: quiet and do not retrieve if file exists already (avoids writing duplicates)

8/28/18
- qt system is now the default mode. DEFAULT_QT_VERSION is set to system, and go_qt checks QT_SYSTEM
- clhep env sets the path
- jana env sets the path and plugin path

4/11/18
- compilation procedure standardized for package gemc
- compilation procedure standardized for package root
- root version for devel
- compilation procedure standardized for package banks
- compilation procedure standardized for package jana

4/10/18
- added utility functions to get build log (and its shortcut name)
- added utility function to log the start and ending of the compilation
- quiet option to src wget
- removed 32 bit options checks
- compilation procedure standardized for package clhep
- compilation procedure standardized for package xercesc
- added geant4 copy script
- removed clang_option
- compilation procedure standardized for package geant4
- added local scons_bm to packaging
- compilation procedure standardized for package evio
- compilation procedure standardized for package ccdb
- compilation procedure standardized for package mlibrary


3/29/18
- added note on instructions
- modified go_mlibrary to include LIBRARY="shared" option, in case users want to build gemc as a library (adds -fPic)

.. Note::
	3/21/18 ceInstall tag 2.2

|

3/21/18
- fixed cmake version check script

3/12/18
- adding prototype for system qt in Linux distributions.
- reversing order of cadmesh / scons so include files can be found
- adding local version of mlibrary to release
- updated instructions
- a bit of colors in the instructions
- fixed go_qt endif missing
- added timing for various packages
- limiting number of parallel compilation in mlibrary
- fixed go_banks untarring

3/11/18