@@ -7,6 +7,7 @@
 - better README and walkthrough explanation
 - better step-by-step instruction formatting
 - added qc option to wget: quiet and do not retrieve if file exists already (avoids writing duplicates)
+- added doc for default system installation of qt
 
 8/28/18
 - qt system is now the default mode. DEFAULT_QT_VERSION is set to system, and go_qt checks QT_SYSTEM
